--- a/Harvey/Application/requirements.txt
+++ b/Harvey/Application/requirements.txt
@@ -1,56 +1,26 @@
-appdirs==1.4.4
-atomicwrites==1.4.0
-attrs==20.1.0
-beautifulsoup4==4.9.1
-blpapi==3.14.0
-Brotli==1.0.7
-bs4==0.0.1
-certifi==2020.6.20
+Brotli==1.0.9
 click==7.1.2
-colorama==0.4.3
-dash==1.7.0
-dash-core-components==1.6.0
-dash-daq==0.5.0
-dash-html-components==1.0.2
-dash-renderer==1.2.2
-dash-table==4.5.1
-dcc==0.1.0
-distlib==0.3.1
-dnspython==2.0.0
-filelock==3.0.12
+dash==1.16.0
+dash-core-components==1.12.0
+dash-html-components==1.1.1
+dash-renderer==1.8.0
+dash-table==4.10.1
+flash==1.0.3
 Flask==1.1.2
 Flask-Compress==1.5.0
 Flask-SQLAlchemy==2.4.4
 future==0.18.2
 gunicorn==20.0.4
-iniconfig==1.0.1
-intrinio-sdk==5.6.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-more-itertools==8.4.0
 numpy==1.19.1
-packaging==20.4
 pandas==1.1.1
-pdblp==0.1.8
-pipenv==2020.8.13
 plotly==4.9.0
-pluggy==0.13.1
-py==1.9.0
-pyarrow==1.0.1
-pymongo==3.11.0
-pyparsing==2.4.7
-pytest==6.0.1
+psycopg2==2.8.5
 python-dateutil==2.8.1
 pytz==2020.1
 retrying==1.3.3
-ruamel.yaml==0.16.10
-ruamel.yaml.clib==0.2.0
 six==1.15.0
-soupsieve==2.0.1
 SQLAlchemy==1.3.19
-toml==0.10.1
-urllib3==1.25.10
-virtualenv==20.0.31
-virtualenv-clone==0.5.4
 Werkzeug==1.0.1
